--- a/inline.html/burgercard.css
+++ b/inline.html/burgercard.css
@@ -3,15 +3,18 @@
   margin-left: 20px;
   margin-top: 20px;
   background-color: white;
+
   
 }
 img{
   height: 500px;
+
 }
 
 h1{
   font-size: xx-large;
   padding-top: 50px;
+  
 }
 
 p{
@@ -23,13 +26,17 @@ ul{
 }
 
 button{
+  text-align: center;
   background-color: red;
   font-size: 15px;
   color: white;
   padding-left: 40px;
  height: 30px;
+ box-shadow: 2px 3px 4px 5px black;
+ }
 
- 
- 
- 
-  }
+ marquee{
+  font-size: xx-large;
+  font-family: 'Times New Roman', Times, serif;
+
+ }
