--- a/inline.html/nav.css
+++ b/inline.html/nav.css
@@ -6,6 +6,8 @@ margin: 0;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
+ position: fixed;
+ width: 100%;
 }
 .navbar ul{
  display: flex;
