--- a/inline.html/ccc.css
+++ b/inline.html/ccc.css
@@ -1,5 +1,5 @@
 .c{
- background-color: cadetblue;
+ background-color: rgb(57, 216, 222);
  height: 100vh;
  display: grid;
  grid-template-columns: repeat(3,auto);
