--- a/inline.html/project.css
+++ b/inline.html/project.css
@@ -1,10 +1,12 @@
 body{
  margin: 0;
  padding: 0;
+ 
 }
 .parent{
 display: flex;
  background-color: white;
+ color: black;
  width: 100%;
  gap: 500px;
  width: 500px;
@@ -15,15 +17,15 @@ display: flex;
 .parent input{
   padding: 15px 140px;
   border-radius: 50px;
+  
 }
 h1{
  color: brown;
   font-family: cursive;
   margin-left: 80px;
 }
-.n2{
- 
-}
+
+
 .list{
 margin-left: 50px;
 list-style: none;
@@ -34,3 +36,16 @@ gap: 80px;
  height: 100vh;
  background-position: center;
 }
+.image{
+  font-size: xx-large;
+  text-align: center;
+}
+p{
+font-size: larger;
+text-align: center;
+}
+.product{
+  display: flex;
+  height: 20px;
+}
+
