--- a/inline.html/project.css
+++ b/inline.html/project.css
@@ -1,7 +1,7 @@
 body{
  margin: 0;
  padding: 0;
- 
+
 }
 .parent{
 display: flex;
@@ -25,7 +25,7 @@ h1{
   margin-left: 80px;
 }
 .image{
-
+max-height:fit-content ;
 }
 
 .list{
@@ -61,6 +61,9 @@ text-align: center;
  display: flex;
  justify-content: space-evenly;
 }
+.cell img{
+width: 400px;
+}
 
 #p1{
   text-transform: capitalize;
@@ -84,14 +87,16 @@ text-align: center;
  
 
 .product{
-  padding-top: 100px;
+  padding-top: 50px;
 }
  .d1{
- padding-left: 200px;
- margin-right: 20px;
+ padding-left: 100px;
+ margin-right: 10px;
+
   }
  .d2{ 
   padding-right: 200px;
+ 
  }
 
  .cc{
@@ -99,9 +104,35 @@ text-align: center;
   text-align: center;
   line-height: 20px;
   text-transform: capitalize;
-  
- }
+  }
+
  #pp1{
  text-transform: lowercase;
  }
+
+ .f1{
+  text-align: center;
+  font-size: 60px;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+ }
+ .f2{
+ font-size: 40px;
+ font-weight: lighter;
+ line-height: 1px;
+ }
+
+ .brand{
+  display: flex;
+  justify-content: space-evenly;
+  text-transform: uppercase;
+ }
+.brand2{
+ display: flex;
+ justify-content: space-evenly;
+ text-transform: uppercase;
+}
+ 
+ 
+ 
  
