--- a/inline.html/project.css
+++ b/inline.html/project.css
@@ -2,9 +2,15 @@
  margin: 0;
  padding: 0;
  text-decoration: none;
+ list-style: none;
+}
+
+.hh1{
+text-align: center; 
+background-color: rgb(218, 184, 248);
 }
 .top{
- background-color: rgb(246, 230, 246);
+ background-color: rgb(226, 186, 226);
  font-size: 30px;
 
 }
@@ -21,7 +27,7 @@ display: flex;
  padding-top: 20px;
 }
 .parent h1{
- font-size: 30px;
+ font-size: 20px;
  font-family: cursive;
   margin-left: 80px;
   color: brown;
@@ -31,7 +37,8 @@ display: flex;
   background-color: white;
  color: black;
  padding-top: 30px;
- justify-content: space-evenly;
+ gap: 200px;
+ align-items: center;
 }
 
 
@@ -45,12 +52,12 @@ display: flex;
 
 .image{
   max-height:fit-content ;
-  padding-top: 10px;
+  padding-top: 150px;
   padding-bottom: 50px;
   }
 
-  .image img{
-    /* margin-top: 130px; */
+  .image h1{
+    padding-top: 50px;
   }
 
 .list{
@@ -58,10 +65,9 @@ margin-left: 50px;
 list-style: none;
 display: flex;
 gap: 100px;
-padding-left: 50px;
-padding-right: 250px;
-
+justify-content: space-evenly;
 }
+
 
 .i{
  size: 100px;
@@ -100,9 +106,10 @@ text-align: center;
  text-align: left;
 }
 .cell img{
-width: 400px;
+width: 300px;
 padding-bottom: 30px;
 }
+
 
 #p1{
   text-transform: capitalize;
@@ -121,15 +128,16 @@ padding-bottom: 30px;
        text-transform: capitalize;
        align-items: center;
   line-height: 20px;
+}
 
-     }
- 
-  #p4{
-       text-transform: capitalize;
+#p4{
+  text-transform: capitalize;
        align-items: center;
   line-height: 20px;
+}
 
-       }
+ 
+
  
 
 .product{
@@ -250,23 +258,74 @@ padding-bottom: 20px;
 color: white;
  display: flex;
  justify-content: space-evenly;
+}
+
+.r{
+ font-size: 50px;
+}
+
+.footer img{
+  padding-left: 50px;
+  padding-top: 30px;
+}
+.dd{
+ display: flex;
+ justify-content: space-evenly;
+
+}
+.div1{
+  border: 2px solid rgb(59, 9, 9);
+  padding-top: 30px;
+}
+
+.div2{
+  border: 2px solid rgb(59, 9, 9);
+  padding-top: 30px;
 
 }
 
-#fi{
+#f1{
 text-transform: capitalize;
+padding-top: 50px;
+
 }
 #f2{
- font-size: 30px;
+ padding-top: 150px;
+ line-height: 30px;
 }
+
+#f3{
+  padding-top: 150px;
+  line-height: 30px;
+ 
+}
+#f4{
+  padding-top: 150px;
+ line-height: 50px;
+}
+#p1{
+ border-bottom: 2px solid white;
+}
+
 .fa{
  list-style: none;
 }
 
-@media screen(min-width: 200px) and (max-width: 500px) {
-  body{
-   background-color: black;
-  background-color: cornflowerblue;
-
-  }
+#fp{
+ padding-top: 50px;
+ font-size: 25px;
 }
+
+#a{
+ display: flex;
+ justify-content: space-evenly;
+}
+
+.pg{
+ padding-top: 50px;
+ border-top: 2px solid white;
+ border-bottom: 2px solid white;
+
+}
+
+
